# MUC

./: readme.txt
Guides/: Guide_RPi_5.md  Guide_to_test_lidar  Guide_to_test_lidar.md
articu_bot/install/: local_setup.sh  setup.sh
articu_bot/log/: latest_build
articu_bot/src/articubot_one/config/: mapper_params_online_async.yaml  my_controllers.yaml
install/: local_setup.sh  setup.sh
install/encoder_reader/share/encoder_reader/: package.sh
install/motor_control/share/motor_control/: package.sh
install/publish_pwm_values/share/publish_pwm_values/: package.sh
install/rplidar_ros/share/rplidar_ros/: local_setup.sh  package.sh
lidar_test/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lidar_test/log/: latest_build
lidar_test/rplidar_ros/install/: local_setup.sh  setup.sh
lidar_test/rplidar_ros/log/: latest_build
log/: latest_build
muc_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
muc_ws/log/: latest_build
muc_ws/src/dev_sys/: package.xml  setup.cfg  setup.py
muc_ws/src/odom_publisher/: setup.py
muc_ws_rpi/install/: local_setup.sh  setup.sh
muc_ws_rpi/log/: latest_build
muc_ws_rpi/src/bot_sys/: package.xml  setup.cfg  setup.py
muc_ws_rpi/src/cmd_vel_to_stm32/: package.xml  setup.cfg  setup.py
muc_ws_rpi/src/cmd_vel_to_stm32/cmd_vel_to_stm32/: cmd_vel_to_stm32_node.py
muc_ws_rpi/src/encoder_reader/: setup.py
muc_ws_rpi/src/publish_imu/: setup.cfg  setup.py
rplidar_ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rplidar_ros/log/: latest_build
(+47 files in other folders)
